--- a/src/Components/Area/Area.scss
+++ b/src/Components/Area/Area.scss
@@ -1,7 +1,19 @@
-.test {
+.popup {
   background-color: aquamarine;
   width: 100px;
   padding: 5px;
   text-align: center;
   position: absolute;
+
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.popup__field {
+  margin-left: 5px;
+}
+
+.popup__field:nth-child(-n+2) {
+  border-bottom: 1px solid black;
 }
