--- a/src/Pages/MainPage/MainPage.scss
+++ b/src/Pages/MainPage/MainPage.scss
@@ -1,21 +1,21 @@
-@use '../../Components/General Styles/fonts.scss' as *;
+@use '../../Components/GeneralStyles/fonts.scss' as *;
 
-.mainPage { 
+.mainPage{ 
   padding: 140px;
   padding-top: 100px;
 
-  &__slides {
+  &__slides{
     display: block;
     width: calc(100vw - 280px);
     height: 90vh;
     margin-top: 20px;
   }
 
-  &__cardBlock {
+  &__cardBlock{
     margin-top: 100px;
   }
 
-  &__title {
+  &__title{
     padding: 20px;
     color: #051C1B;
     @include text;
@@ -24,7 +24,7 @@
     border-top: 1px solid #051C1B;
   }
 
-  &__cards {
+  &__cards{
     margin-top: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
