--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -1,6 +1,6 @@
-@use '../../Components/General Styles/fonts.scss' as *;
+@use '../../Components/GeneralStyles/fonts.scss' as *;
 
-.card {
+.card{
   $textPadding: 20px;
 
   justify-self: center;
@@ -9,20 +9,20 @@
   // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   width: 350px;
 
-  &:nth-child(3) {
+  &:nth-child(3){
     justify-self: end;
   }
 
-  &:nth-child(2) {
+  &:nth-child(2){
     justify-self: center;
   }
 
-  &:nth-child(1) {
+  &:nth-child(1){
     justify-self: start;
   }
   
 
-  &__date {
+  &__date{
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -36,7 +36,7 @@
     border-bottom: 1px solid #2B614C;
   }
 
-  &__pic {
+  &__pic{
     background-image: url('../../Assets/Images/work.png');
     background-position: center;
     background-size: 100%;
@@ -58,7 +58,7 @@
     margin-top: $textPadding;
   }
 
-  &:hover {
+  &:hover{
     cursor: pointer;
   }
 }
