--- a/src/Constants/GeneralStyles/fonts.scss
+++ b/src/Constants/GeneralStyles/fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Open+Sans:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Open+Sans:wght@300;400;700&family=Roboto:wght@500&display=swap');
 
 @mixin text{
   font-family: 'Inter', sans-serif;
@@ -20,4 +20,10 @@
   font-family: 'Inter', sans-serif;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
+}
+
+@mixin textMedium {
+  font-family: 'Inter', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
 }
