--- a/src/Modules/Area/Area.scss
+++ b/src/Modules/Area/Area.scss
@@ -1,19 +1,27 @@
+@use '../../Constants/GeneralStyles/fonts.scss' as *;
 .popup{
-  background-color: aquamarine;
-  width: 100px;
-  padding: 5px;
-  text-align: center;
+  background-color: #3D7658;
+  width: 220px;
+  height: 140px;
   position: absolute;
+  padding: 5px;
+  padding-top: 10px;
+  color: white;
+  font-size: 20px;
 
+  &__flat {
+    @include textBold;
+    
+    
+    border-bottom: 3px solid white;
+    padding: 0;
+    width: 70%;
+    padding-bottom: 10px;
+  }
 
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
+  &__field{
+    @include textMedium;
+    margin-top: 10px;
+  } 
 
-.popup__field{
-  margin-left: 5px;
-}
-
-.popup__field:nth-child(-n+2){
-  border-bottom: 1px solid black;
 }
