--- a/src/Pages/LevelPage/LevelPage.scss
+++ b/src/Pages/LevelPage/LevelPage.scss
@@ -6,7 +6,12 @@
   grid-template-columns: 1fr;
   justify-items: center;
   grid-gap: 100px;
-  margin-top: 100px;
+  // min-height: 150vh;
+
+  // background-image: url('../../Assets/Images/building2.jpg');
+  // background-repeat: no-repeat;
+  // background-size: cover;
+
 
   &__levels {
     // background-color: red;
@@ -18,7 +23,6 @@
   position: relative;
   flex-direction: row;
   user-select: none;
-
   $sizes: 60px;
   &__level {
     width: $sizes;
@@ -40,6 +44,7 @@
     }
 
     transition: 1s;
+    z-index: 1;
   }
 
   &__choseBox {
@@ -47,7 +52,7 @@
     width: calc($sizes + 1px);
     height: calc($sizes + 1px);;
     position: absolute;
-    z-index: -1;
+    z-index: 0;
     transition: all .5s;
     left: 0px;
   }
