--- a/src/Pages/LevelPage/LevelPage.scss
+++ b/src/Pages/LevelPage/LevelPage.scss
@@ -6,9 +6,8 @@
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 3fr;
   justify-items: center;
-  // grid-gap: 100px;
-  // min-height: 150vh;
   padding: 100px;
+  min-height: 80vh;
 
   // background-image: url('../../Assets/Images/buildingBackground.png');
   // background-repeat: no-repeat;
