add route to projects on main Page

--- a/src/Modules/Header/Header.scss
+++ b/src/Modules/Header/Header.scss
@@ -1,5 +1,13 @@
 @use '../../Constants/GeneralStyles/fonts.scss' as *;
 
+html {
+  scroll-behavior: smooth;
+}
+
+.routeLink {
+  all: unset;
+}
+
 .header{
   @include text;
   background-repeat: no-repeat;
